Added Last 100 messages fetch functionality

--- a/client/ChatApp/src/Pages/Chat/Chat.css
+++ b/client/ChatApp/src/Pages/Chat/Chat.css
@@ -9,7 +9,7 @@
     flex-direction: column;
     align-items: start;
     margin : 5px 0px;
-    padding: 2px;
+    padding: 10px;
     background-color: #E1AFD1;    
     border-radius: 5px;
 }
@@ -25,3 +25,8 @@
     height: 85vh;
     overflow-Y: scroll;
 }
+
+.p-10{
+    padding-left : 10px
+}
+
